[package]
name = "package-name"
version = "0.1.3"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
strip = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono"] }
diesel_migrations = { version = "2", features = ["postgres"] }
jsonwebtoken = "8.2.0"
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets", "uuid"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_postgres_pool"] }
serde = { version = "1", features = ["derive"] }
openssl = "*" # musl
# time = "0.3"  # musl

# uuid = { version = "1.3.0", features = ["v4"] }
# reqwest = { version = "0.11", features = ["json"] }
# tokio = { version = "1", features = ["full"] }
